--- a/css/styles.css
+++ b/css/styles.css
@@ -24,6 +24,16 @@ font-weight: 900; */
   --primary-background-color: #ffffff;
 }
 
+html {
+  box-sizing: border-box;
+}
+
+*,
+::before,
+::after {
+  box-sizing: inherit;
+}
+
 body {
   font-family: var(--primary-font-family);
   font-size: 14px;
@@ -33,12 +43,32 @@ body {
 }
 
 /* Header */
-
 .header {
-  background-color: var(--primaty-background-color);
+  /* background-color: var(--primaty-background-color); */
+  background-color: aqua;
+}
+
+.container {
+  width: 1200px;
+  padding-right: 15px;
+  padding-left: 15px;
+  margin-right: auto;
+  margin-left: auto;
+  outline: 2px solid red;
+}
+
+.header-container {
+  display: flex;
+}
+
+.navigation-menu {
+  display: flex;
+  align-items: center;
 }
 
 .logo {
+  margin-right: 85px;
+
   font-family: var(--secondary-font-family);
   font-weight: 700;
   font-size: 26px;
@@ -55,11 +85,34 @@ body {
 }
 
 .list {
+  padding: 0;
+  margin: 0;
   list-style-type: none;
+}
+
+.navigation-list {
+  display: flex;
+}
+
+.navigation-list-item:not(:last-child) {
+  margin-right: 50px;
+}
+
+.contacts-list {
+  display: flex;
+  margin-left: auto;
+}
+
+.contacts-list-item:not(:last-child) {
+  margin-right: 30px;
 }
 
 .navigation-list-item-link,
 .contacts-list-item-link {
+  display: block;
+  padding-top: 32px;
+  padding-bottom: 32px;
+
   font-weight: 500;
   line-height: 1.14;
   letter-spacing: 0.02em;
@@ -85,17 +138,34 @@ body {
 
 /* Hero-section */
 
+.hero-section {
+  /* padding-top: 200px;
+  padding-bottom: 200px; */
+  text-align: center;
+  background-color: green;
+}
+
 .hero-section-title {
+  margin-top: 0;
+  margin-bottom: 30px;
+
   font-weight: 900;
   font-size: 44px;
   line-height: 1.36;
-  text-align: center;
   letter-spacing: 0.06em;
   text-transform: uppercase;
   color: #ffffff;
 }
 
 .modal-window-button {
+  min-width: 200px;
+  padding-right: 32px;
+  padding-bottom: 10px;
+  padding-left: 32px;
+  padding-top: 10px;
+  border-style: none;
+  border-radius: 4px;
+
   font-weight: 700;
   font-size: 16px;
   line-height: 1.87;
@@ -112,7 +182,27 @@ body {
 
 /* Features section */
 
+.features-section {
+  padding-top: 94px;
+  padding-bottom: 94px;
+}
+
+.features-list {
+  display: flex;
+}
+
+.features-list-item:not(:last-child) {
+  margin-right: 30px;
+}
+
+.features-list-item-image {
+  margin-bottom: 55px;
+}
+
 .features-list-item-title {
+  margin-top: 0;
+  margin-bottom: 10px;
+
   font-size: 14px;
   font-weight: 700;
   line-height: 1.14;
@@ -120,6 +210,9 @@ body {
 }
 
 .features-list-item-description {
+  margin-top: 0;
+  margin-bottom: 0;
+
   font-weight: 400;
   line-height: 1.71;
   color: var(--secondary-text-color);
@@ -127,14 +220,37 @@ body {
 
 /* Services section */
 
+.services-section {
+  padding-top: 94px;
+  padding-bottom: 94px;
+
+  background-color: greenyellow;
+}
+
 .section-title {
+  margin-top: 0;
+  margin-bottom: 50px;
   font-weight: 700;
   font-size: 36px;
   line-height: 1.17;
   text-align: center;
 }
 
+.services-list {
+  display: flex;
+}
+
+.services-list-item:not(:last-child) {
+  margin-right: 30px;
+}
+
+.services-list-item-image {
+  display: block;
+}
+
 .services-list-item-title {
+  margin: 0;
+
   font-weight: 700;
   font-size: 14px;
   line-height: 1.14;
@@ -146,11 +262,29 @@ body {
 
 /* Team section */
 .team-section {
+  padding-top: 94px;
+  padding-bottom: 94px;
+
   background-color: #f5f4fa;
+}
+
+.team-list {
+  display: flex;
+}
+
+.team-list-item:not(:last-child) {
+  margin-right: 30px;
+}
+
+.team-list-item-image {
+  display: block;
+  margin-bottom: 30px;
 }
 
 .team-list-item-title,
 .team-list-item-description {
+  margin-top: 0;
+  margin-bottom: 10px;
   font-weight: 500;
   font-size: 16px;
   line-height: 1.19;
@@ -158,11 +292,19 @@ body {
 }
 
 .team-list .team-list-item-description {
+  margin-bottom: 16px;
   font-weight: 400;
   color: var(--secondary-text-color);
 }
 
 /* Customers section */
+
+.customers-section {
+  padding-top: 94px;
+  padding-bottom: 94px;
+
+  background-color: khaki;
+}
 
 /* Footer */
 .footer {
