--- a/css/styles.css
+++ b/css/styles.css
@@ -44,6 +44,9 @@ body {
 
 /* Header */
 .header {
+  /* padding-top: 25px;
+  padding-bottom: 25px; */
+
   /* background-color: var(--primaty-background-color); */
   background-color: aqua;
 }
@@ -67,7 +70,7 @@ body {
 }
 
 .logo {
-  margin-right: 85px;
+  display: block;
 
   font-family: var(--secondary-font-family);
   font-weight: 700;
@@ -76,11 +79,15 @@ body {
   color: #2196f3;
 }
 
+.header .logo {
+  margin-right: 85px;
+}
+
 .link {
   text-decoration: none;
 }
 
-.logo-second-part {
+.header .logo-second-part {
   color: #000000;
 }
 
@@ -92,6 +99,7 @@ body {
 
 .navigation-list {
   display: flex;
+  align-items: center;
 }
 
 .navigation-list-item:not(:last-child) {
@@ -100,6 +108,7 @@ body {
 
 .contacts-list {
   display: flex;
+  align-items: center;
   margin-left: auto;
 }
 
@@ -139,15 +148,18 @@ body {
 /* Hero-section */
 
 .hero-section {
-  /* padding-top: 200px;
-  padding-bottom: 200px; */
+  padding-top: 200px;
+  padding-bottom: 200px;
   text-align: center;
   background-color: green;
 }
 
 .hero-section-title {
+  width: 696px;
   margin-top: 0;
+  margin-right: auto;
   margin-bottom: 30px;
+  margin-left: auto;
 
   font-weight: 900;
   font-size: 44px;
@@ -181,14 +193,24 @@ body {
 }
 
 /* Features section */
-
-.features-section {
+.section {
   padding-top: 94px;
   padding-bottom: 94px;
 }
 
+.features-section {
+  padding-bottom: 47px;
+
+  background-color: lightgrey;
+}
+
 .features-list {
   display: flex;
+}
+
+.features-list-item {
+  width: calc((100% - 90px) / 4);
+  outline: 2px solid blue;
 }
 
 .features-list-item:not(:last-child) {
@@ -219,10 +241,8 @@ body {
 }
 
 /* Services section */
-
 .services-section {
-  padding-top: 94px;
-  padding-bottom: 94px;
+  padding-top: 47px;
 
   background-color: greenyellow;
 }
@@ -262,9 +282,6 @@ body {
 
 /* Team section */
 .team-section {
-  padding-top: 94px;
-  padding-bottom: 94px;
-
   background-color: #f5f4fa;
 }
 
@@ -297,22 +314,57 @@ body {
   color: var(--secondary-text-color);
 }
 
+.worker-social-networks-pages-list {
+  display: flex;
+  padding-bottom: 24px;
+}
+
 /* Customers section */
 
 .customers-section {
-  padding-top: 94px;
-  padding-bottom: 94px;
-
   background-color: khaki;
+}
+
+.customers-list {
+  display: flex;
+  justify-content: space-between;
+}
+
+.customers-list-item-link {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 170px;
+  height: 90px;
+  border: 1px solid #afb1b8;
+  border-radius: 4px;
 }
 
 /* Footer */
 .footer {
+  padding-top: 60px;
+  padding-bottom: 60px;
   background-color: #2f303a;
+}
+
+.footer > .container {
+  display: flex;
+}
+
+.contacts-block {
+  margin-right: 69px;
+}
+
+.footer .logo {
+  margin-bottom: 20px;
 }
 
 .footer .logo-second-part {
   color: #ffffff;
+}
+
+.contact-data-list-item:not(:last-child) {
+  margin-bottom: 9px;
 }
 
 .contact-data-list-item-link {
@@ -326,16 +378,49 @@ body {
   color: #ffffff;
 }
 
+.social-networks-block {
+  margin-right: 94px;
+}
+
 .call-to-action {
+  display: block;
+  margin-bottom: 20px;
+
   font-weight: 700;
   line-height: 1.14;
   text-transform: uppercase;
   color: #ffffff;
 }
 
-/* Portfolio */
+.studio-social-networks-pages-list {
+  display: flex;
+}
+
+.studio-social-networks-pages-list-item:not(:last-child) {
+  margin-right: 10px;
+}
+
+/* PORTFOLIO */
+.works-section {
+  padding-top: 93px;
+  padding-bottom: 94px;
+
+  background-color: lightblue;
+}
+
+.filter-buttons-list {
+  display: flex;
+  justify-content: center;
+  margin-bottom: 50px;
+}
+
+.filter-buttons-list-item:not(:last-child) {
+  margin-right: 8px;
+}
 
 .filter-button {
+  border-radius: 4px;
+
   font-weight: 500;
   font-size: 16px;
   line-height: 1.62;
@@ -351,7 +436,34 @@ body {
   background-color: #2196f3;
 }
 
+.works-list {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.works-list-item {
+  width: calc((100% - 60px) / 3);
+  outline: 2px solid goldenrod;
+}
+
+.works-list-item:not(:nth-child(3n)) {
+  margin-right: 30px;
+}
+
+.works-list-item:not(:nth-last-child(-n + 3)) {
+  margin-bottom: 30px;
+}
+
+.works-list-item-link-image {
+  display: block;
+  margin-bottom: 20px;
+}
+
 .works-list-item-link-title {
+  padding-left: 24px;
+  margin-top: 0;
+  margin-bottom: 4px;
+
   font-weight: 700;
   font-size: 18px;
   line-height: 2;
@@ -360,6 +472,10 @@ body {
 }
 
 .works-list-item-link-definition {
+  padding-bottom: 20px;
+  padding-left: 24px;
+  margin-top: 0;
+  margin-bottom: 0;
   font-weight: 400;
   font-size: 16px;
   line-height: 1.87;
@@ -367,6 +483,8 @@ body {
 }
 
 .works-list-item-link-description {
+  margin-top: 0;
+  margin-bottom: 0;
   font-weight: 400;
   font-size: 18px;
   line-height: 1.55;
