--- a/css/styles.css
+++ b/css/styles.css
@@ -29,8 +29,8 @@ html {
 }
 
 *,
-::before,
-::after {
+*::before,
+*::after {
   box-sizing: inherit;
 }
 
@@ -60,7 +60,7 @@ body {
   outline: 2px solid red;
 }
 
-.header-container {
+.header > .container {
   display: flex;
 }
 
@@ -70,8 +70,6 @@ body {
 }
 
 .logo {
-  display: block;
-
   font-family: var(--secondary-font-family);
   font-weight: 700;
   font-size: 26px;
@@ -87,7 +85,7 @@ body {
   text-decoration: none;
 }
 
-.header .logo-second-part {
+.logo-second-part {
   color: #000000;
 }
 
@@ -170,7 +168,7 @@ body {
 }
 
 .modal-window-button {
-  min-width: 200px;
+  /* min-width: 200px; */
   padding-right: 32px;
   padding-bottom: 10px;
   padding-left: 32px;
@@ -210,7 +208,7 @@ body {
 
 .features-list-item {
   width: calc((100% - 90px) / 4);
-  outline: 2px solid blue;
+  /* outline: 2px solid blue; */
 }
 
 .features-list-item:not(:last-child) {
@@ -218,7 +216,14 @@ body {
 }
 
 .features-list-item-image {
-  margin-bottom: 55px;
+  padding-top: 55px;
+  padding-right: 100px;
+  padding-bottom: 55px;
+  padding-left: 100px;
+  margin-bottom: 30px;
+  border-radius: 4px;
+
+  background: #f5f4fa;
 }
 
 .features-list-item-title {
@@ -270,6 +275,8 @@ body {
 
 .services-list-item-title {
   margin: 0;
+  padding-top: 27px;
+  padding-bottom: 27px;
 
   font-weight: 700;
   font-size: 14px;
@@ -316,7 +323,12 @@ body {
 
 .worker-social-networks-pages-list {
   display: flex;
+  justify-content: center;
   padding-bottom: 24px;
+}
+
+.worker-social-networks-pages-list-item:not(:last-child) {
+  margin-right: 10px;
 }
 
 /* Customers section */
@@ -355,12 +367,12 @@ body {
   margin-right: 69px;
 }
 
-.footer .logo {
-  margin-bottom: 20px;
-}
-
 .footer .logo-second-part {
   color: #ffffff;
+}
+
+.address {
+  margin-top: 20px;
 }
 
 .contact-data-list-item:not(:last-child) {
@@ -419,6 +431,11 @@ body {
 }
 
 .filter-button {
+  padding-right: 22px;
+  padding-bottom: 6px;
+  padding-left: 22px;
+  padding-top: 6px;
+  border-style: none;
   border-radius: 4px;
 
   font-weight: 500;
